docserverk - Fix the CSS to avoid weird behavior on mobile.
Bug: skia:8678

--- a/docserverk/res/css/docs.css
+++ b/docserverk/res/css/docs.css
@@ -21,7 +21,6 @@ main {
   padding: 1em;
   padding-left: 2em;
   overflow-y: auto;
-  max-width: 90em;
 }
 
 pre {
@@ -168,7 +167,7 @@ header img {
 
 main {
   grid-area: main;
-  margin: 0 auto;
+  margin: 0 0 0 2em;
   padding-bottom: 2em;
 }
 
@@ -194,6 +193,9 @@ body {
 }
 
 @media (max-width: 900px) {
+  #rhs {
+    display: none;
+  }
 
   body {
     display: grid;
