--- a/docserverk/res/css/main.css
+++ b/docserverk/res/css/main.css
@@ -21,7 +21,6 @@ main {
   padding: 1em;
   padding-left: 2em;
   overflow-y: auto;
-  max-width: 90em;
 }
 
 pre {
@@ -162,7 +161,7 @@ header img {
 
 main {
   grid-area: main;
-  margin: 0 auto;
+  margin: 0 0 0 2em;
   padding-bottom: 2em;
 }
 
@@ -188,6 +187,9 @@ body {
 }
 
 @media (max-width: 900px) {
+  #rhs {
+    display: none;
+  }
 
   body {
     display: grid;
